--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,6 @@
 plugins {
     id "java"
-<<<<<<< HEAD
-    id "edu.wpi.first.GradleRIO" version "2026.1.1"
-=======
-    id "edu.wpi.first.GradleRIO" version "2025.3.2"
->>>>>>> e229d2be188447f824b8819b37f7a8333dccdacf
+    id "edu.wpi.first.GradleRIO" version "2026.2.1"
 }
 
 java {
@@ -23,7 +19,7 @@ deploy {
             // or from command line. If not found an exception will be thrown.
             // You can use getTeamOrDefault(team) instead of getTeamNumber if you
             // want to store a team number in this file.
-            team = project.frc.getTeamNumber()
+            team = 696
             debug = project.frc.getDebugOrDefault(false)
 
             artifacts {
@@ -47,12 +43,8 @@ deploy {
 
 def deployArtifact = deploy.targets.roborio.artifacts.frcJava
 
-<<<<<<< HEAD
 // Set to true to use debug for all targets including JNI, which will drastically impact
 // performance.
-=======
-// Set to true to use debug for JNI.
->>>>>>> e229d2be188447f824b8819b37f7a8333dccdacf
 wpi.java.debugJni = false
 
 // Set this to true to enable desktop support.
@@ -97,13 +89,9 @@ wpi.sim.addDriverstation()
 // knows where to look for our Robot Class.
 jar {
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
-<<<<<<< HEAD
     from('src') { into 'backup/src' }
     from('vendordeps') { into 'backup/vendordeps' }
     from('build.gradle') { into 'backup' }
-=======
-    from sourceSets.main.allSource
->>>>>>> e229d2be188447f824b8819b37f7a8333dccdacf
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
